--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"aos": "^2.3.4",
 		"bootstrap": "^5.1.3",
 		"next": "12.0.3",
 		"react": "17.0.2",
